--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,15 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oxanium&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="./style/style.css">
   <title>Document</title>
 </head>
@@ -36,8 +45,8 @@
 
       <div class="item info">
         <div class="sectionBtn">
-          <button class="btnwallet">
-            <h3>Conecct Wallet</h3>
+          <button class=" btn btnwallet">
+            <p class="pBtnWallet">Conecct Wallet</p>
           </button>
         </div>
         <div class="imgprofile">
@@ -45,7 +54,11 @@
         </div>
       </div>
     </navbar>
+    <div class="display-1 text-center text-white textForm">Create your own masterpiece</div>
+    <p class=" text-center text-white  paragraph">Get onboard and earn money like a pro</p>
+
   </header>
+
 </body>
 
 </html>
