--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
 
 <body>
   <header class="header-container">
+    <img src="./images/Vector.svg" alt="" class="vector">
     <navbar class="container-navbar">
       <div class="item logo">
         <img src="./images/Rectangle 4.svg" alt="">
@@ -54,8 +55,8 @@
         </div>
       </div>
     </navbar>
-    <div class="display-1 text-center text-white textForm">Create your own masterpiece</div>
-    <p class=" text-center text-white  paragraph">Get onboard and earn money like a pro</p>
+    <div class="display-1 text-center text-white textForm">Create Your Own Masterpiece</div>
+    <p class=" text-center text-white  paragraph">Get Onboard And Earn Money Like a Pro</p>
 
   </header>
 
