--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,76 @@
     <p class=" text-center text-white  paragraph">Get Onboard And Earn Money Like a Pro</p>
 
   </header>
+  <main>
+    <div>
+      <section class="sectionContainer">
+
+        <div class="formLayout dashed">
+          <div class="borderForm dashed">
+            <label for="formFileLg" class="form-label">
+              <div class="borderFileImg">
+                <img src="./images/file.svg" alt="" class="fileImg">
+              </div>
+              <p class="pFileNft">Add Your NFT File Here</p>
+              <p class="pFileNftTwo">Png, Jpg, Gif, Video Or Any File Up To 100mb</p>
+              <a href="formFileLg" class="browse">Browse</a>
+            </label>
+
+            <input class="form-control form-control-lg" id="formFileLg" type="file">
+
+          </div>
+
+
+        </div>
+
+      </section>
+    </div>
+    <section class="boxForm">
+      <article class="inputsContainer">
+        <div class="form-row">
+          <div class="email">
+            <label for="inputEmail1">Item Name</label>
+            <input type="email" class="form-control" placeholder="Select Collection" id="inputEmail1">
+          </div>
+          <div class="email">
+            <label for="inputEmail2"> Collection</label>
+            <input type="text" class="form-control" placeholder="Select Collection" id="inputEmail2">
+          </div>
+          <div class="email">
+            <label for="inputEmail3">BlockChain</label>
+            <input type="email" class="form-control formEtherium" placeholder="Etherium" id="inputEmail3">
+            <span>
+              <img src="./images/Ellipse 19.svg" alt="">
+            </span>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="email">
+            <label for="inputEmail4">External link</label>
+            <input type="text" class="form-control " placeholder="Htpps:Yoursite.Com/Item/123" id="inputEmail4">
+          </div>
+          <div class="email">
+            <label for="inputEmail5">Supply</label>
+            <input type="email" class="form-control" placeholder="1" id="inputEmail5">
+          </div>
+
+        </div>
+
+      </article>
+      <article class="descriptionComponent">
+        <label for="textArea">
+          Description
+        </label>
+        <textarea name="" id="textArea" cols="30" rows="10"
+          placeholder="Provide a Detailed Description Of Your Item"></textarea>
+      </article>
+      <div class=" sectionBtn buttonSubmit">
+        <button class=" btn btnwallet">
+          <p class="pBtnWallet">Update Profile</p>
+        </button>
+      </div>
+    </section>
+  </main>
 
 </body>
 
