--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Collection</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Oxanium:wght@500&display=swap" rel="stylesheet" />
+    
   </head>
   <body>
-    <p>exemplo</p>
+    <div class="content">
+      <header class="header-box">
+        <p class="header-text">Explore Our Newly Released NFT Collection</p>
+        <h1 class="header-title">Our Collection</h1>
+      </header>
+      <main class="main-box">
+          <figure class="main-card last-card last-left-card">
+            <img src="Rectangle 31.svg" alt="NFT de worm." />
+          </figure>
+          <figure class="main-card third-card third-left-card">
+            <img>
+            <img src="Rectangle 28.svg" alt="NFT de sereia." />
+          </figure>
+          <figure class="main-card second-card second-left-card">
+            <img>
+            <img src="Rectangle 27.svg" alt="NFT de astronauta." />
+          </figure>
+          <figure class="main-card first-card">
+            <img src="Rectangle 25.svg" alt="NFT de macaco." />
+          </figure>
+          <figure class="main-card second-card second-right-card">
+            <img>
+            <img src="Rectangle 26.svg" alt="NFT de pilota." />
+          </figure>
+          <figure class="main-card third-card third-right-card">
+            <img>
+            <img src="Rectangle 29.svg" alt="NFT de macaco miami vice." />
+          </figure>
+          <figure class="main-card last-card last-right-card">
+            <img>
+            <img src="Rectangle 30.svg" alt="NFT de druida." />
+          </figure>
+      </main>
+    </div>
   </body>
 </html>
