--- a/contact.html
+++ b/contact.html
@@ -128,8 +128,86 @@
         </button>
       </div>
     </section>
-  </main>
 
+    <section class=" container boxEmail">
+      <div class="textEmail ">
+        <p>Ready For Next NFT Drop?</p>
+      </div>
+      <form action="">
+        <div class="inputEmail">
+          <label for="inputEmailX">
+            <input type="email" class="form-control" placeholder="info@gmail.com" id="inputEmailX">
+            <div class="boxSend">
+              <div class="containerButtonSend">
+                <button class="buttonSend">
+                  <img src="./images/send.svg" alt="" class="sendImg">
+                </button>
+              </div>
+            </div>
+
+          </label>
+
+        </div>
+      </form>
+    </section>
+  </main>
+  <footer class="footerContainer">
+    <section class="content">
+      <div class="footerLogo">
+        <img src="./images/Rectangle 4.svg" alt="">
+        <img src="./images/hihami.svg" alt="">
+      </div>
+      <div class="footerContent">
+        <p class="textFooter">
+          Shihami is the world’s leading NFTs marketplace where you can discover, sell and bid NFTs and get rich
+        </p>
+        <div class="socialMedias">
+          <img src="./images/socialMedias/Shihami/youtube.svg" alt="">
+          <img src="./images/socialMedias/Shihami/twitter.svg" alt="">
+          <img src="./images/socialMedias/Shihami/facebook.svg" alt="">
+          <img src="./images/socialMedias/Shihami/google.svg" alt="">
+        </div>
+        <p class="textRights">
+          All Rights Reserved @Faizansayani
+        </p>
+      </div>
+      <div class="footerNav">
+        <div class="about">
+          <p class="textAbout">About</p>
+          <div class="frames">
+            <a href="">
+              <p class="hrefText"> About NFT</p>
+            </a>
+            <a href="">
+              <p class="hrefText"> Live Auctions</p>
+            </a>
+            <a href="">
+              <p class="hrefText"> NFT Blog</p>
+            </a>
+            <a href="">
+              <p class="hrefText"> Activity</p>
+            </a>
+          </div>
+        </div>
+        <div class="support">
+          <p class="textAbout">Support</p>
+          <div class="frames">
+            <a href="">
+              <p class="hrefText"> Help & Support</p>
+            </a>
+            <a href="">
+              <p class="hrefText"> Live Auctions</p>
+            </a>
+            <a href="">
+              <p class="hrefText"> NFT Blog</p>
+            </a>
+            <a href="">
+              <p class="hrefText"> Collection</p>
+            </a>
+          </div>
+        </div>
+    </section>
+  </footer>
 </body>
 
 </html>
