--- a/index.html
+++ b/index.html
@@ -8,42 +8,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Oxanium:wght@500&display=swap" rel="stylesheet" />
-    
   </head>
   <body>
-    <div class="content">
+    <section class="content">
       <header class="header-box">
         <p class="header-text">Explore Our Newly Released NFT Collection</p>
-        <h1 class="header-title">Our Collection</h1>
+        <h2 class="header-title">Our Collection</h2>
       </header>
-      <main class="main-box">
-          <figure class="main-card last-card last-left-card">
-            <img src="Rectangle 31.svg" alt="NFT de worm." />
-          </figure>
-          <figure class="main-card third-card third-left-card">
-            <img>
-            <img src="Rectangle 28.svg" alt="NFT de sereia." />
-          </figure>
-          <figure class="main-card second-card second-left-card">
-            <img>
-            <img src="Rectangle 27.svg" alt="NFT de astronauta." />
-          </figure>
-          <figure class="main-card first-card">
-            <img src="Rectangle 25.svg" alt="NFT de macaco." />
-          </figure>
-          <figure class="main-card second-card second-right-card">
-            <img>
-            <img src="Rectangle 26.svg" alt="NFT de pilota." />
-          </figure>
-          <figure class="main-card third-card third-right-card">
-            <img>
-            <img src="Rectangle 29.svg" alt="NFT de macaco miami vice." />
-          </figure>
-          <figure class="main-card last-card last-right-card">
-            <img>
-            <img src="Rectangle 30.svg" alt="NFT de druida." />
-          </figure>
-      </main>
-    </div>
+      <div class="main-box">
+        <img src="./assets/statue.svg" alt="NFT de estátua." class="main-card last-card last-left-card" />
+        <img src="./assets/mermaid.svg" alt="NFT de sereia." class="main-card third-card third-left-card" />
+        <img src="./assets/astronaut.svg" alt="NFT de astronauta." class="main-card second-card second-left-card" />
+        <img src="./assets/monkey.svg" alt="NFT de macaco." class="main-card first-card" />
+        <img src="./assets/pilot.svg" alt="NFT de pilota." class="main-card second-card second-right-card" />
+        <img src="./assets/miami-vice.svg" alt="NFT de macaco miami vice." class="main-card third-card third-right-card" />
+        <img src="./assets/druid.svg" alt="NFT de druida." class="main-card last-card last-right-card" />
+      </div>
+    </section>
   </body>
 </html>
