feat:updating style.ccs blur effect, adding background img.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>how it works</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxanium&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <header>
+        <h1>How it works</h1>
+    </header>
+
+    <main>
+        <section class="efect">
+        <div class="efeito"></div>
+            <div class="slot">
+              <div class="ellipse">
+                  <img src="./assets/01img.png" alt="imagem de uma carteira">
+              </div>
+              <h1>Set up your wallet</h1>
+            </div>
+  
+            <div class="slot">
+              <div class="ellipse">
+                <img src="./assets/02img.png" alt="imagem de uma pasta">
+            </div>
+              <h1>Create your collection</h1>
+            </div>
+   
+            <div class="slot"><div class="ellipse">
+                <img src="./assets/03img.png" alt="imagem de um icone de figurinha">
+            </div>
+              <h1>Add your NFTs</h1>
+            </div>
+  
+            <div class="slot"><div class="ellipse">
+                <img src="./assets/04img.png" alt="icone de investimentos">
+            </div>
+              <h1>List them for sale</h1>
+            </div>
+        </section>
+
+    </main>
+</body>
+
 </html>
