adding the wallets section

--- a/index.html
+++ b/index.html
@@ -1,10 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>wallets</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https: //fonts.googleapis.com/css2? family= Lato:ital@1 &família = Oxânio & display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    <section class="wallets">
+        <div class="contents">
+            <p>
+                Trade with world's most trusted and fastest wallets
+            </p>
+            <h2>
+                wallets we support
+            </h2>
+        </div>
+    </section>
+    <main>
+        <section class="walletscards">
+            <div class="wallet1">
+
+                <div class="ellipse">
+                    <img src="./assets/Ellipse 1.png.png" alt="metamask">
+                </div>
+                <p>metamask</p>
+            </div>
+            <div class="wallet1">
+
+                <div class="ellipse">
+                    <img src="./assets/Ellipse 2.png.png" alt="Binance">
+                </div>
+                <p>Binance</p>
+            </div>
+            <div class="wallet1">
+
+                <div class="ellipse">
+                    <img src="./assets/Ellipse 3.png.png" alt="Trust wallet">
+                </div>
+                <p>Trust wallet</p>
+            </div>
+            <div class="wallet1">
+
+                <div class="ellipse">
+                    <img src="./assets/Ellipse 4.png.png" alt="Alpha">
+                </div>
+                <p>Alpha</p>
+            </div>
+            <div class="wallet1">
+
+                <div class="ellipse">
+                    <img src="./assets/Ellipse 5.png.png" alt="CoinGecko">
+                </div>
+                <p>CoinGecko</p>
+            </div>
+        </section>
+    </main>
+</body>
+
 </html>
